--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,5 +18,9 @@ limitations under the License.
 ]]
 project(CLDConfig)
 
+include(GNUInstallDirs)
+
 add_subdirectory(test)
 enable_testing()
+
+install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/CLDConfig/ DESTINATION ${CMAKE_INSTALL_DATADIR}/${CMAKE_PROJECT_NAME})
