--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,9 @@ project(CLDConfig)
 
 include(GNUInstallDirs)
 
-add_subdirectory(test)
-enable_testing()
+if(BUILD_TESTING)
+  add_subdirectory(test)
+  enable_testing()
+endif()
 
 install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/CLDConfig/ DESTINATION ${CMAKE_INSTALL_DATADIR}/${CMAKE_PROJECT_NAME})
