--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -61,6 +61,12 @@ add_test(NAME LCFIJet
 )
 set_property(TEST LCFIJet APPEND PROPERTY DEPENDS ddsim_edm4hep)
 
+add_test(NAME MLJetTagger
+         WORKING_DIRECTORY ${CLDConfig_DIR}
+         COMMAND k4run --enableLCFIJet --enableMLJetTagger --inputFiles=test.edm4hep.root --outputBasename=trkOnly_test_edm4hep CLDReconstruction.py --GeoSvc.detectors=${DETECTOR}
+)
+set_property(TEST MLJetTagger APPEND PROPERTY DEPENDS ddsim_edm4hep)
+
 add_test(NAME tracking_truth
          WORKING_DIRECTORY ${CLDConfig_DIR}
          COMMAND k4run --trackingOnly --truthTracking --inputFiles=test.edm4hep.root --outputBasename=trkOnly_truth_test_edm4hep CLDReconstruction.py --GeoSvc.detectors=${DETECTOR}
