--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 ]]
-project(CLDConfig)
+project(CLDConfig LANGUAGES NONE)
 
 include(GNUInstallDirs)
 include(CTest)
