--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,9 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 ]]
+
+cmake_minimum_required(VERSION 3.15)
+
 project(CLDConfig LANGUAGES CXX)
 
 include(GNUInstallDirs)
