--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -90,9 +90,11 @@ add_test(NAME marlin
 set_property(TEST marlin APPEND PROPERTY DEPENDS ddsim_lcio)
 
 add_test(NAME "run_wrapper_native"
-  COMMAND k4run CLDReconstruction_native.py --inputFiles sim.edm4hep.root --native --outputBasename output_REC_native
+         WORKING_DIRECTORY ${CLDConfig_DIR}
+         COMMAND k4run CLDReconstruction_iosvc.py --inputFiles sim.edm4hep.root --native --outputBasename output_REC_native
 )
 
 add_test(NAME "compare_native"
-  COMMAND "${PROJECT_SOURCE_DIR}/test/scripts/compare-native.py"
+         WORKING_DIRECTORY ${CLDConfig_DIR}
+         COMMAND "${CMAKE_CURRENT_LIST_DIR}/scripts/compare-native.py"
 )
